--- a/index.html
+++ b/index.html
@@ -24,5 +24,5 @@
 
 	<body>
 		<e-cu-root></e-cu-root>
-	<script src="./Shopmobile/runtime.js" defer></script><script src="./Shopmobile/polyfills-es5.js" nomodule defer></script><script src="./Shopmobile/polyfills.js" defer></script><script src="./Shopmobile/styles.js" defer></script><script src="./Shopmobile/vendor.js" defer></script><script src="./Shopmobile/main.js" defer></script></body>
+	<script src="runtime.js" defer></script><script src="polyfills-es5.js" nomodule defer></script><script src="polyfills.js" defer></script><script src="styles.js" defer></script><script src="vendor.js" defer></script><script src="main.js" defer></script></body>
 </html>
